--- a/110_1Quiz3/110_1Quiz3.csproj
+++ b/110_1Quiz3/110_1Quiz3.csproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="session1.aspx" />
+    <Content Include="session2.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +77,20 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="session1.aspx.cs">
+      <DependentUpon>session1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="session1.aspx.designer.cs">
+      <DependentUpon>session1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="session2.aspx.cs">
+      <DependentUpon>session2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="session2.aspx.designer.cs">
+      <DependentUpon>session2.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
